@@ -1971,3 +1971,5 @@
            also !panzer, !sniper, !riflewar, and !giba, !splat, !splata
 * quad:    added a patch from redeye, with some fixes, greeting sound, 
            some shrubbot commands, and others.
+* quad:    g_noSkillUpgrades, and the changes yada made to the /ref system
+           renamed g_scoreboard_cf to g_countryFlags (and cg_countryFlags too)
